# weekend-planner

./: .gitignore  README.md  dev.sh
.claude/: settings.json
.claude/agents/: trellis-architecture-review.md  trellis-check.md  trellis-code-review.md  trellis-implement.md  trellis-merge-review.md  trellis-research.md  trellis-spec-review.md
.claude/hooks/: dispatch-guard.py  inject-git-sop-reminder.py  inject-workflow-state.py  session-start.py  test_dispatch_guard.py  test_inject_git_sop_reminder.py
.githooks/: commit-msg  post-checkout  pre-commit  pre-push  pre-rebase
.github/workflows/: ci.yml  trellis-platform.yml
.trellis/: .gitignore  .template-hashes.json  config.yaml  workflow.md
.trellis/commands/: ship.md
.trellis/scripts/: add_session.py  task.py
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: orchestrator.py
backend/app/api/: routes.py
backend/app/llm/: prompts.py  provider.py
backend/app/models/: canvas.py  domain.py  room.py  schemas.py  state.py
backend/app/services/: canvas.py  family.py  feedback.py  friends.py  llm_room_agent.py  room.py  room_agent_schemas.py  spatial.py
backend/app/tools/: availability.py  booking.py  delivery.py  isochrone.py  poi_search.py  routing.py  weather.py
backend/tests/test_llm/: test_provider.py
backend/tests/test_tools/: test_collaborative_room.py  test_family_safety.py  test_friends_gathering.py  test_mock_tools.py  test_plan_canvas.py  test_spatial.py
docs/: 项目文档.md
frontend/: .env.example  .gitignore  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useAutoScroll.ts  useChat.ts  usePrefersReducedMotion.ts  useRoom.ts  useTypewriter.ts
frontend/lib/: api.ts  types.ts  utils.ts
frontend/types/: amap.d.ts
scripts/: check_pr_description.py  install_trellis_commands.py  trellis_branch_report.py  trellis_ship.py  trellis_ship.py.new
scripts/tests/: test_base_hooks.py  test_claude_hooks.py  (+5 more)
(+179 files in other folders)
