[project]
name = "activity-planner-agent"
version = "0.1.0"
description = "Weekend activity planning agent for Meituan AI Hackathon 2026"
requires-python = ">=3.11"
dependencies = [
    "langgraph==0.4.1",
    "langchain-core==0.3.51",
    "langchain-openai==0.3.12",
    "langchain-anthropic==0.3.12",
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "pydantic==2.11.2",
    "pydantic-settings==2.9.1",
    "structlog==25.1.0",
    "openrouteservice==2.3.3",
    "geopandas==1.0.1",
    "shapely==2.1.0",
    "httpx==0.28.1",
    "sse-starlette==2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "ruff==0.11.12",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
