[project]
name = "activity-planner-agent"
version = "0.1.0"
description = "Weekend activity planning agent for Meituan AI Hackathon 2026"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.9",
    "pydantic-settings>=2.9",
    "structlog>=25.0",
    "httpx>=0.27",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "ruff==0.11.12",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
